# docker-dev

./: .zshrc  Dockerfile  Makefile  setup-docker.sh  setup-go.sh  setup-node.sh  setup-nvim.sh  setup-userspace.sh  wishlist.md
.github/workflows/: build.yml
apt-base/: Dockerfile  Makefile
bridge/: Dockerfile  Makefile
cachelib/: Dockerfile  Makefile
cli/: Cargo.toml  Makefile  aidconfig.yml
cli/src/: config.rs  docker_ps.rs  main.rs  prelude.rs
cuda/: Dockerfile  README
