[package]
name = "docker-dev-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aid" # short for AI Docker
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
